fixing error tolist